--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,25 +2,31 @@ name: CI
 
 on:
   push:
+    branches:
+      - "main"
     tags:
-      - '*'
+      - "*"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Add permission for packages
+    permissions:
+      contents: read
+      packages: write
     steps:
-      -
-        name: Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publishing docker image
-        env:
-          DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: ./.github/workflows/publish-docker.sh
